# Ray-tracer

./: .gitignore  README.md
src/: CMakeLists.txt  Objects.cpp  Objects.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h  camera.cpp  camera.h  constants.h  fragment.glsl  main.cpp  openglfunc.cpp  openglfunc.h  pixel.cpp  pixel.h  ray.cpp  ray.h  vertex.glsl
